# maly

./: .gitignore  Cargo.toml  readme.md
src/: gpu.wgsl  main.rs
